--- a/public/scss/partials/_page-write-review.scss
+++ b/public/scss/partials/_page-write-review.scss
@@ -1,8 +1,18 @@
 #content.container.write-review {
     background-color: white;
-    margin-top: 65px;
     padding-bottom: 10px;
+    min-height: 500px;
+    padding-bottom: 40px;
+    @media screen and (max-width: $screen-xs-max) {
+        margin-top: 75px;
+    }
+
     .business-infos {
+        &:not(.page1) {
+            @media screen and (max-width: $screen-xs-max) {
+                @include hide;
+            }
+        }
         h4 {
             color: red;
             font-size: 1.8em;
@@ -31,6 +41,9 @@
     }
 
     .review-rating {
+        &:not(.page1) {
+            @include hide;
+        }
         @include flexbox;
         @include flex-direction(column);
         @include align-items(center);
@@ -48,6 +61,9 @@
             @media screen and (min-width: $screen-sm-min) {
                 display: block;
                 width: 600px;
+            }
+            @media screen and (max-width: 330px) {
+                margin-bottom: 0;
             }
             label {
                 font-size: 1.7em;
@@ -73,6 +89,10 @@
                 .star {
                     width: 45px;
                     height: 45px;
+                    @media screen and (max-width: 330px) {
+                        height: 35px;
+                        width: 35px;
+                    }
                     @media screen and (min-width: $screen-sm-min) {
                         width: 25px;
                         height: 25px;
@@ -83,6 +103,212 @@
         }
         button {
             margin-bottom: 15px;
+        }
+    }
+    .average-rating {
+        &:not(.page1) {
+            @media screen and (min-width: $screen-sm-min) {
+                @include hide;              
+            }
+        }
+        &:not(.page2) {
+            @media screen and (max-width: $screen-xs-max) {
+                @include hide;                
+            }
+        }
+        @media screen and (min-width: $screen-sm-min) {
+            display: block;
+            width: 600px;
+            border-top: 1px solid $grey;
+            padding-top: 10px; 
+        }
+        .flex-container {
+            @include flexbox;
+            @include flex-direction(column);
+            @include align-items(center);
+            @media screen and (min-width: $screen-sm-min) {
+                display: block;
+            }
+            .flex-container2 {
+                @include flexbox;
+                @include flex-direction(column);
+                @include align-items(center);
+                @media screen and (min-width: $screen-sm-min) {
+                    float: left;
+                    display: block;
+                }
+            }
+            label {
+                font-size: 2.2em;
+                color: red;
+                font-weight: $light;
+                @media screen and (min-width: $screen-sm-min) {
+                    font-size: 1.7em;
+                }
+            }
+            .sub-label {
+                font-size: 2em;
+                @media screen and (min-width: $screen-sm-min) {
+                    font-size: 2.5em;
+                    margin-top: -10px;
+                }
+            }
+            .stars {
+                height: auto;
+                @media screen and (min-width: $screen-sm-min) {
+                    float: right;
+                }
+                .star {
+                    height: 45px;
+                    width: 45px;
+                    @media screen and (min-width: $screen-sm-min) {
+                        height: 25px;
+                        width: 25px;
+                    }
+                }
+            }
+        }
+        textarea {
+            margin-top: 15px;
+            border-radius: 0;
+            @media screen and (min-width: $screen-sm-min) {
+                margin-top: 70px;
+            }
+        }
+    }
+
+    .user-infos {
+        &:not(.page2) {
+            @media screen and (min-width: $screen-sm-min) {
+                @include hide;                
+            }
+        }
+        &:not(.page3) {
+            @media screen and (max-width: $screen-xs-max) {
+                @include hide;                
+            }
+        }
+        @media screen and (min-width: $screen-sm-min) {
+            width: 600px;
+        }
+        @media screen and (max-width: $screen-xs-max) {
+            @include flexbox;
+            @include flex-direction(column);
+            @include align-items(center);
+        }
+        .title {
+            width: 600px;
+            height: 30px;
+            font-size: 1.8em;
+            font-weight: 400;
+            border-bottom: 1px solid $grey2;
+            padding-bottom: 10px;
+            margin-bottom: 10px;
+            @media screen and (max-width: $screen-xs-max) {
+                width: 100%;
+            }
+            span:nth-child(1) {
+                float: left;
+                color: $hairfie;
+            }
+            .connect {
+                font-size: 0.8em;
+                float: right;
+                line-height: 25px;
+                text-decoration: underline;
+                &:hover {
+                    color: inherit;
+                }
+            }
+        }
+        .connect-bloc {
+            width: 300px;
+            margin-bottom: 20px;
+            .facebook {
+                margin: 0;
+            }
+            p {
+                display: none;
+            }
+            input {
+                font-size: 1.4em;
+                width: 300px;
+                height: 50px;
+                border-radius: 0;
+            }
+            .form-group {
+                margin-bottom: 0;
+                input[type="email"] {
+                    margin-top: 15px;
+                    margin-bottom: 0;
+                }
+                input[type="password"] {
+                    margin-bottom: 0;
+                }
+            }
+            .btn-red {
+                width: 300px;
+                border-radius: 0;
+                letter-spacing: 0;
+                font-size: 1.6em;
+                height: 40px;
+                margin-top: 15px;
+                margin-bottom: 15px;
+                @include flexbox;
+                @include align-items(center);
+                @include justify-content(center);
+            }
+            .forgot-password {
+                &:hover {
+                    color: inherit;
+                }
+                @media screen and (max-width: $screen-xs-max) {
+                    font-size: 1.2em;
+                }
+            }
+        }
+        .gender-radio {
+            label {
+                font-size: 1.4em;
+                font-weight: $light;
+            }
+        }
+        > .form-group {
+            margin-bottom: 0;
+            input {
+                width: 300px;
+                height: 50px;
+                border-radius: 0;
+            }
+        }
+        .form-group:not(.has-error) {
+            input[name="userEmail"], 
+            input[name="userFirstName"],
+            input[name="userLastName"],
+            input[name="connectEmail"] {
+                border-bottom: 0;
+            }
+        }
+        .form-group.has-error + .form-group.has-error {
+            input {border-top : 0};
+        }
+        .form-group.has-error + .validation-errors {
+            margin-top: 10px;
+        }
+        .validation-errors {
+            width: 300px;
+            @include inline-flex;
+            @include flex-direction(column);
+            font-size: 1.4em;
+            color: $hairfie;
+            border-color: $hairfie;
+            background-color: MistyRose;
+            border-radius: 0;
+        }
+        .btn-book {
+            display: block;
+            margin-top: 20px;
+            margin-bottom: 20px;
         }
     }
 //     form.form {
@@ -114,3 +340,35 @@
 //         }
 //     }
 }
+#content.container.review-confirmation {
+    background-color: white;
+    min-height: 500px;
+    padding-top: 150px;
+    color: $green;
+    @include flexbox;
+    @include flex-direction(column);
+    @include align-items(center);
+    .check {
+        @include flexbox;
+        @include justify-content(center);
+        width: 50px;
+        height: 50px;
+        font-size: 3em;
+        border: 3px solid $green;
+        border-radius: 100%;
+    }
+    p {
+        font-weight: $regular;
+        font-size: 1.6em;
+        text-align: center;
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+    .btn-red {
+        font-weight: $light;
+        border-radius: 2px;
+    }
+}
+
+
+
