--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -24,6 +24,10 @@ body {
     // }
 }
 
+input, textarea {
+    -webkit-appearance: none;
+}
+
 .locked {
     overflow: hidden !important;
     overflow-x: hidden !important;
