--- a/public/scss/partials/_page-write-review.scss
+++ b/public/scss/partials/_page-write-review.scss
@@ -3,10 +3,21 @@
     padding-bottom: 10px;
     min-height: 500px;
     padding-bottom: 40px;
+    // padding-left: 15px;
     @media screen and (max-width: $screen-xs-max) {
         margin-top: 75px;
+        // padding-left: 0;
     }
-
+    .breadcrumb {
+        background-color: white;
+        @media screen and (max-width: $screen-xs-max) {            
+            padding: 0;
+            margin-bottom: 0;
+        }
+        @media screen and (max-width: 330px) {
+            font-size: 1.2em;
+        }
+    }
     .business-infos {
         &:not(.page1) {
             @media screen and (max-width: $screen-xs-max) {
@@ -14,7 +25,7 @@
             }
         }
         h4 {
-            color: red;
+            color: $hairfie;
             font-size: 1.8em;
             letter-spacing: 0;
             font-weight: $light;
@@ -67,7 +78,7 @@
             }
             label {
                 font-size: 1.7em;
-                color: red;
+                color: $hairfie;
                 font-weight: $light;
                 margin-bottom: 0;
                 @media screen and (min-width: $screen-sm-min) {
@@ -126,8 +137,10 @@
             @include flexbox;
             @include flex-direction(column);
             @include align-items(center);
+            padding-top: 30px;
             @media screen and (min-width: $screen-sm-min) {
                 display: block;
+                padding-top: 0;
             }
             .flex-container2 {
                 @include flexbox;
@@ -140,7 +153,7 @@
             }
             label {
                 font-size: 2.2em;
-                color: red;
+                color: $hairfie;
                 font-weight: $light;
                 @media screen and (min-width: $screen-sm-min) {
                     font-size: 1.7em;
@@ -169,11 +182,16 @@
             }
         }
         textarea {
-            margin-top: 15px;
+            margin-top: 30px;
             border-radius: 0;
             @media screen and (min-width: $screen-sm-min) {
                 margin-top: 70px;
             }
+        }
+        .btn-book {
+            margin-top: 15px;
+            margin-right: auto;
+            margin-left: auto;
         }
     }
 
@@ -203,6 +221,7 @@
             font-weight: 400;
             border-bottom: 1px solid $grey2;
             padding-bottom: 10px;
+            margin-top: 15px;
             margin-bottom: 10px;
             @media screen and (max-width: $screen-xs-max) {
                 width: 100%;
@@ -311,34 +330,22 @@
             margin-bottom: 20px;
         }
     }
-//     form.form {
-//         .green {
-//             float: left;
-//         }
-//     }
-//     div.stars {
-//         height: 1.9em;
-//     }
-//     select {
-//         width: 100%;
-//         background-color: white;
-//         height: 34px;
-//         border: 2px solid #e6e6e6;
-//         font-family: "Lato", sans-serif;
-//         font-weight: 700;
-//         font-size: 1.4em;
-//         letter-spacing: 2px;
-//         color: #c4c4c4;
-//     }
-// }
-
-// .review-confirmation {
-//     @extend #content.reservation;
-//     .row {
-//         button.registration {
-//            width: 100%;
-//         }
-//     }
+    .dots {
+        margin-top: -20px;
+    }
+    .red-dot, .grey-dot {
+        font-size: 3em;
+        margin: 2px;
+        @media screen and (min-width: $screen-sm-min) {
+            @include hide;
+        }
+    }
+    .red-dot {
+        color: $hairfie;
+    }
+    .grey-dot {
+        color: $grey;
+    }
 }
 #content.container.review-confirmation {
     background-color: white;
