--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -382,8 +382,10 @@ header {
         			}
 				}
 				&.sms {
+					color: white;
+					background-color: $hairfie;
 					&:before {
-            			background: url(../img/icons/avis.svg) no-repeat center center;
+            			background: url(../img/icons/avis-white.svg) no-repeat center center;
         				background-size: contain;
         			}
 				}
