--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15633,8 +15633,25 @@ section.home-search .home-search-mobile {
       #content.sms p {
         font-size: 1.3em; } }
   #content.sms .btn-book {
-    width: 150px;
-    margin-top: 20px; }
+    width: 180px;
+    height: 50px;
+    margin-top: 20px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    justify-content: center;
+    font-size: 2em; }
 
 .connect-form {
   border: 1px solid #dfdfdf;
