--- a/public/scss/partials/_page-sms.scss
+++ b/public/scss/partials/_page-sms.scss
@@ -34,7 +34,12 @@
         }
     }
     .btn-book {
-        width: 150px;
+        width: 180px;
+        height: 50px;
         margin-top: 20px;
+        @include flexbox;
+        @include align-items(center);
+        @include justify-content(center);
+        font-size: 2em;
     }
 }
